--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -27,24 +27,23 @@ body {
   box-sizing: border-box;
 }
 
-body,
+/* body,
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: var(--small-space);
-}
+} */
 
-main,
+/* main,
 section {
   margin: var(--medium-space);
   text-align: center;
-}
+} */
 
-main {
+/* main {
   max-width: 35em;
-}
+} */
 
 #game-screen {
   display: flex;
@@ -107,33 +106,33 @@ header {
   text-align: center;
 }
 
-h1 {
+/* h1 {
   color: var(--oc-indigo-8);
   font-size: 38px;
-}
+} */
 
 .subtitle {
   font-size: 22px;
   color: var(--oc-indigo-4);
 }
 
-h1,
+/* h1,
 h2,
 p {
   margin: 0;
-}
+} */
 
-h1 {
+/* h1 {
   font-family: var(--header);
   text-transform: uppercase;
-}
+} */
 
 /* Headings used in board and tip box */
 
-h2 {
+/* h2 {
   color: var(--oc-red-7);
   font-family: var(--headlines);
-}
+} */
 
 /* Regular text used in subtitle and tips */
 
@@ -145,27 +144,26 @@ p {
 
 /* BUTTONS */
 
-button {
+/* button {
   width: 170px;
   height: 50px;
   border-radius: 3px;
   font-family: var(--regular);
-  /* text-transform: uppercase; */
   font-size: 16px;
   margin: var(--small-space);
   border: none;
   background-color: var(--oc-red-7);
   color: var(--oc-gray-1);
-}
+} */
 
-button:hover {
+/* button:hover {
   opacity: 0.9;
-}
+} */
 
-button:active {
+/* button:active {
   position: relative;
   top: 1px;
-}
+} */
 
 /* FOOTER */
 
